# PasswordManager

./: .$UML for PM.drawio.dtmp  .gitignore  LICENSE.md  README.md  UML for PM.drawio  cli.py  core.py  pyproject.toml  requirements.txt  server.py  tests.py  utils.py
browser-ext/: manifest.json
browser-ext/popup/: index.css  index.html  index.js
