[project]
name = "PasswordManager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==44.0.0",
    "pyotp>=2.9.0",
    "ruff>=0.9.6",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
